# richlog

./: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
src/: index.js
src/core/: encoder.js  index.js  parser.js  plugin-handler.js
src/plugins/: index.js  plugin-base.js  plugin-registry.js  plugin-scanner.js  plugin-utils.js
src/plugins/command/: index.html  plugin.json  script.js  style.css
src/plugins/config/: index.html  plugin.json  script.js  style.css
src/plugins/image/: index.html  plugin.json  script.js  style.css
src/web/: index.html  index.js  styles.css
test/: generate-log.js
test/cpp/: CMakeLists.txt  Makefile  README.md  build_and_test.sh  generate_log.cpp  main.cpp  test_decoder.cpp  test_encoder.cpp  test_parser.cpp
test/cpp/include/: richlog.hpp
test/cpp/src/: richlog.cpp
test/js/: README.md
